--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body{
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(123442.jpg);
+    background-image: url(images/123442.jpg);
 }
 
 a:link {
